@@ -75,7 +75,12 @@ Things we'd like to do in 0.2.0.x:
         [No need to do this: the edge-connection choking will already take
         care of this a bit, and rewriting the 'bridged connection' code
         to not use socketpairs will give us even more control.]
-      - Do we switch to arena-allocation for cells?
+      . Do we switch to pool-allocation for cells?
+        o Implement pool-allocation
+        o Have Tor use it for packed cells.
+        o Document it.
+        - Do something smart with freeing unused chunks.
+        - Benchmark pool-allocation vs straightforward malloc.
       - Can we stop doing so many memcpys on cells?
       o Also, only package data from exitconns when there is space on the
         target OR conn's outbuf?  or when the circuit is not too full.
